# outbox-publisher-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/commands/: review.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-94560f2522c9f66cf1d08fa0f80dadb21e61fbcf2cf4a481b545b115257d0842.json
code-review/: 2026-05-21_phase1_PR-1.md  2026-05-22_phase2_PR-3.md  2026-05-23_phase2_PR-3-followup.md  2026-05-23_phase3_workspace.md  2026-05-23_phase4_PR-5.md  TODOs.md
crates/outbox-publisher/: Cargo.toml
crates/outbox-publisher-derive/: Cargo.toml
crates/outbox-publisher-derive/src/: lib.rs
crates/outbox-publisher-derive/tests/ui/: 01_missing_kind.rs  02_missing_aggregate.stderr  04_multiple_aggregate_id_fields.rs  05_non_uuid_aggregate_id.rs  06_derive_on_enum.rs  06_derive_on_enum.stderr  07_aggregate_id_at_struct_level.rs  07_aggregate_id_at_struct_level.stderr  08_unknown_field_key.stderr  09_duplicate_aggregate_id_on_same_field.stderr  10_duplicate_aggregate_id_inside_one_attr.rs  11_empty_kind.rs  12_empty_aggregate.stderr
crates/outbox-publisher-sqlx/: Cargo.toml
crates/outbox-publisher-sqlx/.sqlx/: query-74e512b3b5b61ff522ace11d0817a5b7f37979436c7ebabea93d216670ab1323.json
crates/outbox-publisher-sqlx/src/: lib.rs
crates/outbox-publisher-sqlx/tests/: integration_test.rs
crates/outbox-publisher/proptest-regressions/webhook/: signing.txt
crates/outbox-publisher/src/: domain_event.rs  error.rs  event.rs  lib.rs  publisher.rs
crates/outbox-publisher/src/webhook/: mod.rs  signing.rs
crates/outbox-publisher/tests/: derive_happy_path.rs  publisher_mock_test.rs
crates/outbox-publisher/tests/ui/: 01_missing_kind.stderr  02_missing_aggregate.rs  03_no_aggregate_id_field.rs  03_no_aggregate_id_field.stderr  04_multiple_aggregate_id_fields.stderr  05_non_uuid_aggregate_id.stderr  06_derive_on_enum.stderr  08_unknown_field_key.rs  09_duplicate_aggregate_id_on_same_field.rs  10_duplicate_aggregate_id_inside_one_attr.stderr  11_empty_kind.stderr  12_empty_aggregate.rs  13_uuid_with_generic_args.rs  13_uuid_with_generic_args.stderr
examples/: Cargo.toml  axum-handler.rs  batch-emit.rs  webhook-receiver.rs
examples/src/: lib.rs
tests/fixtures/: 0001_initial_schema.sql
