[workspace]
resolver = "2"
members = [
    "crates/outbox-publisher",
    "crates/outbox-publisher-derive",
    "crates/outbox-publisher-sqlx",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Volodymyr Dotsenko"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/volodymyrd/outbox-publisher-rs"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.13"

# Internal crates
outbox-publisher = { path = "crates/outbox-publisher", version = "0.1.0" }
outbox-publisher-derive = { path = "crates/outbox-publisher-derive", version = "0.1.0" }
outbox-publisher-sqlx = { path = "crates/outbox-publisher-sqlx", version = "0.1.0" }
proc-macro2 = "1"
proptest = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
syn = { version = "2", features = ["full"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
thiserror = "2"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
