[package]
name = "outbox-publisher-derive"
description = "Proc-macro crate: #[derive(DomainEvent)] for outbox-publisher."
keywords = ["outbox", "derive", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
outbox-publisher = { workspace = true }
trybuild = "1"
uuid.workspace = true
