[package]
name = "outbox-publisher-derive"
description = "Proc-macro crate: #[derive(DomainEvent)] for outbox-publisher."
keywords = ["outbox", "derive", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

