[package]
name = "outbox-publisher-sqlx"
description = "SQLx Postgres adapter for outbox-publisher."
keywords = ["outbox", "sqlx", "postgres"]
categories = ["database"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
outbox-publisher.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
