[package]
name = "outbox-publisher-sqlx"
description = "SQLx Postgres adapter for outbox-publisher."
keywords = ["outbox", "sqlx", "postgres"]
categories = ["database"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
include = [
    "src/**/*",
    ".sqlx/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE-MIT",
    "../../LICENSE-APACHE",
]

[dependencies]
outbox-publisher.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
