[package]
name = "outbox-publisher"
description = "Write domain events to a Postgres outbox table atomically, plus HMAC webhook verification helpers."
keywords = ["outbox", "event", "postgres", "webhook"]
categories = ["database"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
derive = ["dep:outbox-publisher-derive"]
# axum: axum extractor for webhook verification.
axum = ["dep:axum", "dep:bytes", "dep:http", "dep:tracing"]

[dependencies]
axum = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
http = { workspace = true, optional = true }

outbox-publisher-derive = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
